unpackaged/main/default/objects/ints__OAuth_Settings__c/ints__OAuth_Settings__c.object-meta.xml
<CustomObject>
    <label>OAuth Settings</label>
    <nameField>
        <displayFormat>OAUTH - {00000}</displayFormat>
        <label>OAuth Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OAuth Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>