unpackaged/main/default/objects/ints__OAuth_Settings__c/fields/ints__Access_Token_URL__c.field-meta.xml
<CustomField>
    <fullName>ints__Access_Token_URL__c</fullName>
    <label>Access Token URL</label>
    <type>Url</type>
</CustomField>