unpackaged/main/default/objects/ints__OAuth_Settings__c/fields/ints__Authorization_URL__c.field-meta.xml
<CustomField>
    <fullName>ints__Authorization_URL__c</fullName>
    <label>Authorization URL</label>
    <type>Url</type>
</CustomField>