unpackaged/main/default/objects/ints__OAuth_Settings__c/fields/ints__Consumer_Secret__c.field-meta.xml
<CustomField>
    <fullName>ints__Consumer_Secret__c</fullName>
    <label>Consumer Secret</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>