unpackaged/main/default/objects/ints__OAuth_Settings__c/fields/ints__Request_Token_URL__c.field-meta.xml
<CustomField>
    <fullName>ints__Request_Token_URL__c</fullName>
    <label>Redirect URL</label>
    <type>Url</type>
</CustomField>