unpackaged/main/default/objects/ints__OAuth_Settings__c/fields/ints__Service_Name__c.field-meta.xml
<CustomField>
    <fullName>ints__Service_Name__c</fullName>
    <label>Service Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>