unpackaged/main/default/objects/ints__OAuth_Settings__c/listViews/ints__All.listView-meta.xml
<ListView>
    <fullName>ints__All</fullName>
    <columns>NAME</columns>
    <columns>ints__Service_Name__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>